<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:divider="?android:dividerHorizontal"
	android:showDividers="middle"
	android:orientation="vertical">
	
	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<TextView
			android:id="@+id/textView_dialogJoinAskroom_joinByLink"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:text="@string/textView_dialogJoinAskroom_joinByLink"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<Button
			android:id="@+id/button_dialogJoinAskroom_joinByLink"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:layout_marginEnd="16dp"
			android:layout_marginTop="8dp"
			android:text="@string/button_dialogJoinAskroom_joinByLink"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@id/textView_dialogJoinAskroom_joinByLink" />
		
		<EditText
			android:id="@+id/editText_dialogJoinAskroom_joinByLink"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:layout_marginEnd="16dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:ems="10"
			android:inputType="text"
			android:hint="@string/editText_dialogJoinAskroom_joinByLink"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@id/button_dialogJoinAskroom_joinByLink"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/textView_dialogJoinAskroom_joinByLink" />
	
	</android.support.constraint.ConstraintLayout>
	
	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<TextView
			android:id="@+id/textView_dialogJoinAskroom_joinByQrCode"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:text="@string/textView_dialogJoinAskroom_joinByQrCode"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<Button
			android:id="@+id/button_dialogJoinAskroom_joinByQrCode"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:layout_marginTop="8dp"
			android:text="@string/button_dialogJoinAskroom_joinByQrCode"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/textView_dialogJoinAskroom_joinByQrCode" />
	
	</android.support.constraint.ConstraintLayout>
	
	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<TextView
			android:id="@+id/textView_dialogJoinRoom_createAskroom"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:text="@string/textView_dialogJoinAskroom_createAskroom"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<Button
			android:id="@+id/button_dialogJoinAskroom_createAskroom"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:layout_marginTop="8dp"
			android:text="@string/button_dialogJoinAskroom_createAskroom"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/textView_dialogJoinRoom_createAskroom" />
	
	</android.support.constraint.ConstraintLayout>

</LinearLayout>
